[gd_scene load_steps=5 format=3 uid="uid://u5tsa603ttky"]

[ext_resource type="Script" path="res://level.gd" id="1_2ujm3"]
[ext_resource type="Script" path="res://Player.gd" id="1_6xmmi"]
[ext_resource type="Script" path="res://HealthBar.gd" id="2_k1xge"]

[sub_resource type="Curve" id="Curve_514hh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Level1" type="Node2D"]
script = ExtResource("1_2ujm3")

[node name="Player1" type="Node2D" parent="."]

[node name="Player1Ship" type="CharacterBody2D" parent="Player1"]
position = Vector2(243, 331)
motion_mode = 1
script = ExtResource("1_6xmmi")
playerName = "Player1"

[node name="CenterCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="CenterPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/CenterPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/CenterPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="ExhaustEmitter" type="CPUParticles2D" parent="Player1/Player1Ship/CenterPolygon"]
position = Vector2(-20, 0)
emitting = false
amount = 50
lifetime = 1.5
randomness = 0.5
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_514hh")
split_scale = true
scale_curve_x = null
scale_curve_y = null
color = Color(1, 0, 0, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="LeftCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LeftPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/LeftPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/LeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="UpperLeftCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperLeftPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/UpperLeftPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/UpperLeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="UpperCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/UpperPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/UpperPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="UpperRightCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperRightPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/UpperRightPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/UpperRightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="RightCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="RightPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/RightPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/RightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LowerRightCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerRightPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/LowerRightPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/LowerRightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LowerCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/LowerPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/LowerPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LowerLeftCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerLeftPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/LowerLeftPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/LowerLeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Player1Health" type="Node2D" parent="Player1" node_paths=PackedStringArray("player")]
script = ExtResource("2_k1xge")
player = NodePath("../Player1Ship")

[node name="Background" type="Polygon2D" parent="Player1/Player1Health"]
color = Color(0.811765, 0, 0.12549, 1)
polygon = PackedVector2Array(0, 0, 500, 0, 500, 20, 0, 20)

[node name="Bar" type="Polygon2D" parent="Player1/Player1Health"]
color = Color(0, 0.662745, 0.0196078, 1)
polygon = PackedVector2Array(0, 0, 5, 0, 5, 20, 0, 20)

[node name="Player2" type="Node2D" parent="."]

[node name="Player2Ship" type="CharacterBody2D" parent="Player2"]
position = Vector2(907, 331)
motion_mode = 1
script = ExtResource("1_6xmmi")
KEY_TURN_LEFT = 4194319
KEY_TURN_RIGHT = 4194321
KEY_ACCELERATE = 4194320
KEY_SHOOT = 4194309
playerName = "Player2"

[node name="CenterCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="CenterPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/CenterPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/CenterPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ExhaustEmitter" type="CPUParticles2D" parent="Player2/Player2Ship/CenterPolygon"]
position = Vector2(-20, 0)
emitting = false
amount = 50
lifetime = 1.5
randomness = 0.5
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
scale_amount_max = 2.0
color = Color(1, 0, 0, 1)

[node name="LeftCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LeftPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/LeftPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/LeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="UpperLeftCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperLeftPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/UpperLeftPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/UpperLeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="UpperCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/UpperPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/UpperPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="UpperRightCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperRightPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/UpperRightPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/UpperRightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="RightCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="RightPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/RightPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/RightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LowerRightCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerRightPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/LowerRightPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/LowerRightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LowerCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/LowerPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/LowerPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LowerLeftCollision" type="CollisionPolygon2D" parent="Player2/Player2Ship"]
rotation = 3.14159
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerLeftPolygon" type="CanvasGroup" parent="Player2/Player2Ship"]
rotation = 3.14159

[node name="Fill" type="Polygon2D" parent="Player2/Player2Ship/LowerLeftPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/Player2Ship/LowerLeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Player2Health" type="Node2D" parent="Player2" node_paths=PackedStringArray("player")]
position = Vector2(1600, 0)
script = ExtResource("2_k1xge")
player = NodePath("../Player2Ship")

[node name="Background" type="Polygon2D" parent="Player2/Player2Health"]
color = Color(0.811765, 0, 0.12549, 1)
polygon = PackedVector2Array(0, 0, -500, 0, -500, 20, 0, 20)

[node name="Bar" type="Polygon2D" parent="Player2/Player2Health"]
color = Color(0, 0.662745, 0.0196078, 1)
polygon = PackedVector2Array(0, 0, -5, 0, -5, 20, 0, 20)

[connection signal="health_depleted" from="Player1/Player1Ship" to="." method="on_healthbar_empty"]
[connection signal="health_depleted" from="Player2/Player2Ship" to="." method="on_healthbar_empty"]
